<resources>
    <string name="app_name">HiltTest</string>
    <string name="add_word">Add word</string>
    <string name="hint_word">Word…</string>
    <string name="button_save">Save</string>
    <string name="empty_not_saved">Word not saved because it is empty.</string>

    <string name="home">Home</string>
    <string name="words">Words</string>
    <string name="plants">Plants</string>
    <string name="settings">Settings</string>
    <string name="blur">Blur</string>


    <string name="blur_lv_1">Level 1</string>
    <string name="blur_lv_2">Level 2</string>
    <string name="blur_lv_3">Level 3</string>

    <string name="button_text_cancel_work">Cancel Work</string>
    <string name="button_text_see_file">See File</string>
    <string name="button_text_go">GO</string>
    <string name="button_text_select_image">Select Image</string>
    <string name="set_permissions_in_settings">Enable permission in app settings.</string>
</resources>
