<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/primary">
        <item
            android:id="@id/home_dest"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />
        <item
            android:id="@id/words_dest"
            android:icon="@drawable/ic_format_list_bulleted"
            android:title="@string/words" />
        <item
            android:id="@id/plants_dest"
            android:icon="@drawable/ic_flower"
            android:title="@string/plants" />
        <item
            android:id="@id/blur_dest"
            android:icon="@drawable/ic_broken_image"
            android:title="@string/blur" />
    </group>

    <item
        android:id="@+id/settings_dest"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings" />
</menu>