<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@+id/home_dest">
    <fragment
        android:id="@+id/home_dest"
        android:name="si.damjanh.androidhilt.ui.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home">

    </fragment>

    <fragment
        android:id="@+id/words_dest"
        android:name="si.damjanh.androidhilt.ui.words.WordsFragment"
        android:label="@string/words"
        tools:layout="@layout/fragment_words">

    </fragment>

    <activity
        android:id="@+id/settings_dest"
        android:name="si.damjanh.androidhilt.ui.settings.SettingsActivity"
        android:label="@string/settings"
        tools:layout="@layout/activity_settings">

    </activity>
</navigation>